tests/valid/metadata_date_formats.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "ISO8601DateFormatsExample",
    "description": "Demonstrates valid ISO 8601 date-time formats",
    "authors": ["Date Format Tester"],
    "created": "2024-01-15T10:30:45.123Z",
    "modified": "2024-02-14T16:45:30.000Z"
  },

  "reaction_systems": {
    "DateTestSystem": {
      "coupletype": "TestCoupler",
      "reference": {
        "notes": "System for testing date format validation"
      },
      "species": {
        "A": { "units": "mol/mol", "default": 1e-6, "description": "Test species A" },
        "B": { "units": "mol/mol", "default": 2e-6, "description": "Test species B" }
      },
      "parameters": {
        "k": { "units": "1/s", "default": 0.001, "description": "Rate constant" }
      },
      "reactions": [
        {
          "id": "test_reaction",
          "name": "A_to_B",
          "substrates": [{ "species": "A", "stoichiometry": 1 }],
          "products": [{ "species": "B", "stoichiometry": 1 }],
          "rate": "k"
        }
      ]
    }
  }
}