tests/invalid/undefined_species_in_products.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "UndefinedSpeciesProducts",
    "description": "Undefined species in reaction products"
  },
  "reaction_systems": {
    "ChemSystem": {
      "species": {
        "NO": { "units": "mol/mol", "default": 1e-9 },
        "O3": { "units": "mol/mol", "default": 40e-9 },
        "NO2": { "units": "mol/mol", "default": 1e-9 }
      },
      "parameters": {
        "k1": { "units": "cm^3/molec/s", "default": 1.8e-12 }
      },
      "reactions": [
        {
          "id": "R1",
          "substrates": { "NO": 1, "O3": 1 },
          "products": { "NO2": 1, "undefined_radical": 1 },
          "rate": "k1"
        }
      ]
    }
  }
}